--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h2>Contact</h2>
                     <h3>Send us memes?</h3>
                     <h3>Follow us?</h3>
-                    <h3>Look at out memes?</h3>
+                    <h3>Look at our memes?</h3>
                     <a href="https://www.instagram.com/golfmemedigest/?hl=en"><h3>@golfmemedigest</h3></a>
                 </div>
                 <p>© Golf Meme Digest</p>
